--- a/styles.css
+++ b/styles.css
@@ -162,3 +162,36 @@ body{
     background-color:var(--efeito-botao);
     color: #00030C;
 }
+
+@media screen and (max-width: 768px) {
+    .container{
+        display: block;
+        background-image: none;
+    }
+
+    .container__imagem{
+        width: 50vw;
+    }
+
+    .container__caixa{
+        margin: 2em 2em;
+    }
+
+    .secundario{
+        margin: 0;
+        text-align: center;
+    }
+
+    .secundario__imagem{
+        width: 50vw;
+    }
+
+    .dispositivos__lista{
+        display: block;
+    }
+
+    .rodape_lista{
+        display: block;
+    }
+
+}
